--- a/app.yaml
+++ b/app.yaml
@@ -27,6 +27,15 @@ handlers:
 - url: /registro
   script: registro.app
 
+- url: /login
+  script: login.app
+
+- url: /menu
+  script: menu.app
+
+- url: /updload
+  script: upload.app
+
 libraries:
 - name: webapp2
   version: "2.5.2"
